--- a/index.html
+++ b/index.html
@@ -14,12 +14,66 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="FreePlayHub - Best Unblocked Games Online">
     <meta name="twitter:description" content="Play the best unblocked games for free. Subway Surfers, Geometry Dash, Cookie Clicker and many more.">
+    <meta property="og:site_name" content="FreePlayHub Games">
+    <meta name="twitter:site" content="@FreePlayHub">
     <title>FreePlayHub - Best Unblocked Games Online | Free Games to Play</title>
     <link rel="canonical" href="https://ug17.github.io">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <!-- Structured Data for Website -->
+<!-- Website Schema -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "FreePlayHub - Best Unblocked Games Online",
+  "url": "https://ug17.github.io",
+  "description": "Play the best unblocked games for free. Subway Surfers, Geometry Dash, Cookie Clicker and many more exciting games.",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://ug17.github.io/search?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
 
-<!-- Structured Data for Organization -->
+<!-- VideoGame Collection -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "CollectionPage",
+  "name": "FreePlayHub Games Collection",
+  "description": "Collection of unblocked games including Subway Surfers, Geometry Dash, Cookie Clicker and more",
+  "url": "https://ug17.github.io",
+  "mainEntity": {
+    "@type": "ItemList",
+    "numberOfItems": 20,
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "item": {
+          "@type": "VideoGame",
+          "name": "Subway Surfers",
+          "url": "https://ug17.github.io/play/subway-surfers",
+          "genre": "Action, Arcade",
+          "description": "Run, jump and dash through the subway tracks"
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "item": {
+          "@type": "VideoGame",
+          "name": "Geometry Dash",
+          "url": "https://ug17.github.io/play/geometry-dash",
+          "genre": "Rhythm, Action",
+          "description": "Jump and fly through dangerous passages"
+        }
+      }
+    ]
+  }
+}
+</script>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
