--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <meta property="og:title" content="FreePlayHub - Best Unblocked Games Online">
     <meta property="og:description" content="Play the best unblocked games for free. Subway Surfers, Geometry Dash, Cookie Clicker and many more exciting games.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://ug17.github.io">
-    <meta property="og:image" content="https://ug17.github.io/images/og-image.jpg">
+    <meta property="og:url" content="https://tikmob.github.io/game">
+    <meta property="og:image" content="https://tikmob.github.io/game/images/og-image.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="FreePlayHub - Best Unblocked Games Online">
     <meta name="twitter:description" content="Play the best unblocked games for free. Subway Surfers, Geometry Dash, Cookie Clicker and many more.">
     <meta property="og:site_name" content="FreePlayHub Games">
     <meta name="twitter:site" content="@FreePlayHub">
     <title>FreePlayHub - Best Unblocked Games Online | Free Games to Play</title>
-    <link rel="canonical" href="https://ug17.github.io">
+    <link rel="canonical" href="https://tikmob.github.io/game">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <!-- Structured Data for Website -->
 <!-- Website Schema -->
@@ -26,11 +26,11 @@
   "@context": "https://schema.org",
   "@type": "WebSite",
   "name": "FreePlayHub - Best Unblocked Games Online",
-  "url": "https://ug17.github.io",
+  "url": "https://tikmob.github.io/game",
   "description": "Play the best unblocked games for free. Subway Surfers, Geometry Dash, Cookie Clicker and many more exciting games.",
   "potentialAction": {
     "@type": "SearchAction",
-    "target": "https://ug17.github.io/search?q={search_term_string}",
+    "target": "https://tikmob.github.io/game/search?q={search_term_string}",
     "query-input": "required name=search_term_string"
   }
 }
@@ -43,7 +43,7 @@
   "@type": "CollectionPage",
   "name": "FreePlayHub Games Collection",
   "description": "Collection of unblocked games including Subway Surfers, Geometry Dash, Cookie Clicker and more",
-  "url": "https://ug17.github.io",
+  "url": "https://tikmob.github.io/game",
   "mainEntity": {
     "@type": "ItemList",
     "numberOfItems": 20,
@@ -54,7 +54,7 @@
         "item": {
           "@type": "VideoGame",
           "name": "Subway Surfers",
-          "url": "https://ug17.github.io/play/subway-surfers",
+          "url": "https://tikmob.github.io/game/play/subway-surfers",
           "genre": "Action, Arcade",
           "description": "Run, jump and dash through the subway tracks"
         }
@@ -65,7 +65,7 @@
         "item": {
           "@type": "VideoGame",
           "name": "Geometry Dash",
-          "url": "https://ug17.github.io/play/geometry-dash",
+          "url": "https://tikmob.github.io/game/play/geometry-dash",
           "genre": "Rhythm, Action",
           "description": "Jump and fly through dangerous passages"
         }
@@ -79,8 +79,8 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "FreePlayHub",
-  "url": "https://ug17.github.io",
-  "logo": "https://ug17.github.io/images/og-image.jpg",
+  "url": "https://tikmob.github.io/game",
+  "logo": "https://tikmob.github.io/game/images/og-image.jpg",
   "description": "Your ultimate destination for the best unblocked games online"
 }
 </script>
@@ -502,13 +502,13 @@
       "@type": "ListItem",
       "position": 1,
       "name": "Home",
-      "item": "https://ug17.github.io"
+      "item": "https://tikmob.github.io/game"
     },
     {
       "@type": "ListItem",
       "position": 2,
       "name": "Games",
-      "item": "https://ug17.github.io/games.html"
+      "item": "https://tikmob.github.io/game/games.html"
     }
   ]
 }
@@ -770,11 +770,11 @@ if ('serviceWorker' in navigator) {
             "@context": "https://schema.org",
             "@type": "WebSite",
             "name": "FreePlayHub Games",
-            "url": "https://ug17.github.io",
+            "url": "https://tikmob.github.io/game",
             "description": "Play the best unblocked games online for free. Subway Surfers, Geometry Dash, Cookie Clicker and many more exciting games.",
             "potentialAction": {
                 "@type": "SearchAction",
-                "target": "https://ug17.github.io/search?q={search_term_string}",
+                "target": "https://tikmob.github.io/game/search?q={search_term_string}",
                 "query-input": "required name=search_term_string"
             }
         };
