--- a/index.html
+++ b/index.html
@@ -36,6 +36,35 @@
 }
 </script>
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "HowTo",
+  "name": "How to Play Unblocked Games on FreePlayHub",
+  "description": "Step-by-step guide to playing unblocked games",
+  "totalTime": "PT1M",
+  "step": [
+    {
+      "@type": "HowToStep",
+      "name": "Visit the website",
+      "text": "Go to FreePlayHub website at ug17.github.io",
+      "url": "https://ug17.github.io"
+    },
+    {
+      "@type": "HowToStep",
+      "name": "Choose a game",
+      "text": "Browse through the game collection and select your favorite game",
+      "url": "https://tikmob.github.io/game.html"
+    },
+    {
+      "@type": "HowToStep",
+      "name": "Start playing",
+      "text": "Click the Play Now button and enjoy the game instantly"
+    }
+  ]
+}
+</script>
+
 <!-- VideoGame Collection -->
 <script type="application/ld+json">
 {
