--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       "@type": "HowToStep",
       "name": "Visit the website",
       "text": "Go to FreePlayHub website at ug17.github.io",
-      "url": "https://ug17.github.io"
+      "url": "https://tikmob.github.io/game"
     },
     {
       "@type": "HowToStep",
