--- a/index.html
+++ b/index.html
@@ -519,6 +519,62 @@
     font-size: 0.85rem;
     padding: 8px;
   }
+/* FAQ Section Styles */
+.faq-section {
+    background: rgba(255, 255, 255, 0.1);
+    padding: 60px 0;
+    margin: 60px 0;
+    border-radius: 12px;
+    backdrop-filter: blur(10px);
+}
+
+.faq-section h2 {
+    text-align: center;
+    margin-bottom: 40px;
+    font-size: 2.2rem;
+}
+
+.faq-item {
+    background: rgba(255, 255, 255, 0.05);
+    padding: 25px;
+    margin: 20px 0;
+    border-radius: 10px;
+    border-left: 4px solid var(--accent);
+    transition: var(--transition);
+}
+
+.faq-item:hover {
+    background: rgba(255, 255, 255, 0.08);
+    transform: translateX(5px);
+}
+
+.faq-item h3 {
+    color: var(--accent);
+    margin-bottom: 15px;
+    font-size: 1.3rem;
+}
+
+.faq-item p {
+    color: rgba(255, 255, 255, 0.8);
+    line-height: 1.6;
+    font-size: 1rem;
+}
+
+/* Responsive FAQ */
+@media (max-width: 768px) {
+    .faq-section {
+        padding: 40px 0;
+        margin: 40px 0;
+    }
+    
+    .faq-item {
+        padding: 20px;
+        margin: 15px 0;
+    }
+    
+    .faq-item h3 {
+        font-size: 1.1rem;
+    }
 }
 
     </style>
