--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@ if ('serviceWorker' in navigator) {
       "name": "Are these games free to play?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "Yes, all games on FreePlayHub are completely free to play without any registration or download required."
+        "text": "Yes, all games on FreePlayHub are completely free to play without any registration, download, or hidden costs required."
       }
     },
     {
@@ -734,7 +734,15 @@ if ('serviceWorker' in navigator) {
       "name": "Do I need to install anything?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "No, all games run directly in your web browser without any installation needed."
+        "text": "No, all games run directly in your web browser without any installation needed. Just click and play instantly."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Is the website safe?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, our website is completely safe with no downloads required. All games run in your browser securely."
       }
     }
   ]
