--- a/game.html
+++ b/game.html
@@ -13,6 +13,134 @@
   <meta property="og:image" content="https://tikmob.github.io/game/thumbnail.jpg">
   <meta property="og:url" content="https://tikmob.github.io/game">
 
+  <!-- Game Schema للعبة الحالية -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoGame",
+  "name": "Free HTML5 Game - FreePlayHub",
+  "url": "https://tikmob.github.io/game/game.html",
+  "description": "Play free online HTML5 browser games instantly without download or ads on FreePlayHub.",
+  "playMode": "Browser",
+  "gamePlatform": "HTML5",
+  "applicationCategory": "Game",
+  "genre": ["Browser Game", "HTML5 Game"],
+  "operatingSystem": "Any",
+  "author": {
+    "@type": "Organization",
+    "name": "FreePlayHub"
+  },
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  }
+}
+</script>
+
+<!-- Breadcrumb Schema -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://tikmob.github.io/game"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Games",
+      "item": "https://tikmob.github.io/game/games.html"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Current Game",
+      "item": "https://tikmob.github.io/game/game.html"
+    }
+  ]
+}
+</script>
+
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Do I need to install anything to play these games?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "No, all games run directly in your browser without any installation required. Just click and play instantly."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Are these games completely free?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, all games on FreePlayHub are 100% free to play with no hidden costs or registration required."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What devices can I play on?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Our HTML5 games work on any device including PC, laptop, tablet, and mobile phones with modern browsers."
+      }
+    }
+  ]
+}
+</script>
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "HowTo",
+  "name": "How to Play HTML5 Games on FreePlayHub",
+  "description": "Learn how to play free browser games without installation",
+  "totalTime": "PT1M",
+  "step": [
+    {
+      "@type": "HowToStep",
+      "name": "Visit FreePlayHub",
+      "text": "Go to the FreePlayHub website and browse the game collection",
+      "url": "https://tikmob.github.io/game"
+    },
+    {
+      "@type": "HowToStep",
+      "name": "Select a game",
+      "text": "Choose from hundreds of free HTML5 browser games",
+      "url": "https://tikmob.github.io/game/games.html"
+    },
+    {
+      "@type": "HowToStep",
+      "name": "Play instantly",
+      "text": "Click the game and start playing immediately without downloads"
+    }
+  ]
+}
+</script>
+
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "FreePlayHub",
+  "url": "https://tikmob.github.io/game",
+  "logo": "https://tikmob.github.io/game/thumbnail.jpg",
+  "description": "Your destination for free online HTML5 browser games",
+  "sameAs": []
+}
+</script>
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
     body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:linear-gradient(135deg,#1a2a6c,#b21f1f,#fdbb2d);color:#fff;min-height:100vh;line-height:1.6}
@@ -324,16 +452,19 @@
       }
     }
 
-    // دالة لتحديث معلومات اللعبة
-    function updateGameInfo(game) {
-      document.getElementById('game-title').textContent = game.title;
-      document.getElementById('game-description').textContent = game.description;
-      document.getElementById('loading-text').textContent = `Loading ${game.title}...`;
-      document.title = `${game.title} - Free Online HTML5 Game | FreePlayHub`;
-      
-      // تحديث وصف الصفحة للسيو
-      updateMetaDescription(game);
-    }
+   // دالة لتحديث معلومات اللعبة
+function updateGameInfo(game) {
+  document.getElementById('game-title').textContent = game.title;
+  document.getElementById('game-description').textContent = game.description;
+  document.getElementById('loading-text').textContent = `Loading ${game.title}...`;
+  document.title = `${game.title} - Free Online HTML5 Game | FreePlayHub`;
+  
+  // تحديث وصف الصفحة للسيو
+  updateMetaDescription(game);
+  
+  // تحديث Structured Data ديناميكياً بناءً على اللعبة
+  updateGameStructuredData(game);
+}
 
     // دالة لتحديث وصف الصفحة للسيو
     function updateMetaDescription(game) {
@@ -348,6 +479,41 @@
         ogDescription.content = `Play ${game.title} - ${game.description}`;
       }
     }
+
+    // دالة لتحديث Structured Data ديناميكياً بناءً على اللعبة
+function updateGameStructuredData(game) {
+  const gameSchema = {
+    "@context": "https://schema.org",
+    "@type": "VideoGame",
+    "name": game.title,
+    "url": window.location.href,
+    "description": game.description,
+    "playMode": "Browser",
+    "gamePlatform": "HTML5",
+    "applicationCategory": "Game",
+    "genre": game.genre,
+    "operatingSystem": "Any",
+    "author": {
+      "@type": "Organization",
+      "name": "FreePlayHub"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  };
+
+  // إضافة أو تحديث الـ Schema
+  let script = document.getElementById('dynamic-game-schema');
+  if (!script) {
+    script = document.createElement('script');
+    script.type = 'application/ld+json';
+    script.id = 'dynamic-game-schema';
+    document.head.appendChild(script);
+  }
+  script.textContent = JSON.stringify(gameSchema);
+}
 
     // دالة لتحميل الإطار
     function loadGameIframe(gameUrl) {
