--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="js-focus-visible">
 <head>
+    <meta name="google-site-verification" content="lVMtkhJx00oUNc1hNeSkJtUrA5D8DQFoH2conZ3Y4zc" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Play the best unblocked games on UG17 - Free online games like Subway Surfers, Geometry Dash, Cookie Clicker and more. Unblocked Games 17 offers the best gaming experience.">
